--- a/index.ipynb
+++ b/index.ipynb
@@ -242,23 +242,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7285553334.0"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"7285553334\" # 7285553335\n",
-    "float(7285553334)"
+    "int(7285553334)"
    ]
   },
   {
