--- a/index.ipynb
+++ b/index.ipynb
@@ -242,12 +242,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7285553334"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"7285553334\" # 7285553335\n",
-    "int(7285553334)"
+    "int()"
    ]
   },
   {
