automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,8 @@
    ],
    "source": [
     "\"7285553334\" # 7285553335\n",
-    "int(\"7285553334\")"
+    "a=\n",
+    "int(\"7285553334\")\n"
    ]
   },
   {
